# python-json-server

./: .pre-commit-config.yaml  LICENSE  README.md
ci/: docker-compose.yaml
src/: env.example  main.py  pyproject.toml
src/api/entrypoints/: index_entrypoint.py  mock_entrypoints.py  router_registrator.py
src/api/tools/: routes.py
src/config/: app_config.py  json_config.py  uvicorn_config.py
src/docker/: Dockerfile
src/interfaces/: base_dto.py  base_keeper.py  base_repository.py  base_use_case.py
src/jsons/: db.json  routes.json
src/models/data_keepers/: json_routes_data_keeper.py
src/models/dto/: routes_dto.py
src/repositories/: json_db_repository.py  json_routes_repository.py
src/tools/: app_initializer.py  enums.py  regex_tool.py
src/tools/di_containers/: api_di_container.py  repositories_di_container.py  use_cases_di_container.py
src/tools/factories/: repositories_factory.py
src/use_cases/: http_use_case.py  json_route_use_case.py
